# xiaozhiMCP

./: .gitignore  README.md  app_server.py  catalog_core.py  cli.py  cluster.py  config.example.toml  config_guide.py  config_loader.py  error_store.py  macos_bridge.py  mcp_router.py  pyproject.toml  requirements.txt  runtime.py
.github/workflows/: ci.yml
components/: __init__.py  base.py  clipboard.py  exa.py  local_schedule.py  local_schedule.sqlite3  windows_manager.py
components/apple_music_macos/: component.py
components/catalog/: component.py
components/exa/: __init__.py  component.py
components/local_schedule/: component.py  local_schedule.sqlite3
docs/wiki/: 01-项目概述.md  02-快速开始.md  03-架构说明.md  04-配置指南.md  05-组件系统.md  06-集群模式.md  07-MCP工具参考.md  08-开发指南.md
tests/: test_catalog_component.py  test_catalog_core.py  test_clipboard_component.py  test_cluster.py  test_error_store.py  test_exa_component.py  test_local_schedule_component.py  test_mcp_router.py  test_mcp_router_normalize.py  test_mcp_router_protocol.py  test_runtime_component_loader.py  test_windows_manager_component.py
