[project]
name = "xiaozhi-mcp-router"
version = "0.1.0"
description = "Xiaozhi MCP router with Exa component"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "requests>=2.32.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
start = "mcp_router:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "mcp_router.py",
  "app_server.py",
  "cluster.py",
  "runtime.py",
  "config_loader.py",
  "error_store.py",
  "catalog_core.py",
  "macos_bridge.py",
  "components",
]

[tool.hatch.build.targets.sdist]
include = [
  "mcp_router.py",
  "app_server.py",
  "cluster.py",
  "runtime.py",
  "config_loader.py",
  "error_store.py",
  "catalog_core.py",
  "macos_bridge.py",
  "components/**/*.py",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 180
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
